[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2018"
authors = ["Kazuhiro.Yabe <Kazuhiro.Yabe@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
log = "0.4"
pixels = "0.4"
winit = "0.25"
winit_input_helper = "0.10"
