[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
authors = ["Kazuhiro.Yabe <Kazuhiro.Yabe@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
pixels = "0.9.0"
winit = "0.27.3"
winit_input_helper = "0.13.0"
rayon = "1.5.3"
font8x8 = "0.3.1"


